<resources>
    <string name="app_name">El Medico</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="api_key">AIzaSyBOvuyIVtsLmzsN1qrFuiEkXLkHc2I1Zb4</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="contact">Phone</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="gender">Gender</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="doctors">Doctors</string>
    <string name="details">Doctor Details</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit Profile</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="confirm">Success</string>
    <string name="appointments">My Appointments</string>

    <string name="doc_reg_page">DOCTOR REGISTRATION</string>
    <string name="doc_first_name">First Name</string>
    <string name="first_name_text">Enter your first name</string>
    <string name="doc_last_name">Last Name</string>
    <string name="last_name_text">Enter your last name</string>
    <string name="doc_username">Username</string>
    <string name="username_text">Enter your username</string>
    <string name="doc_email">Email</string>
    <string name="email_text">Enter your email</string>
    <string name="doc_password">Password</string>
    <string name="password_text">Enter your password</string>
    <string name="doc_address1">Address Line 1</string>
    <string name="addr1_text">Enter your address</string>
    <string name="doc_address2">Address Line 2</string>
    <string name="addr2_text">Enter your address</string>
    <string name="doc_city">City</string>
    <string name="city_text">Enter your city</string>
    <string name="doc_state">State</string>
    <string name="state_text">Enter your state</string>
    <string name="doc_pincode">Pin Code</string>
    <string name="pin_text">Enter your pincode</string>
    <string name="doc_specialization">Specialization</string>
    <string-array name="doc_spl_type">
        <item>General Physician</item>
        <item>Surgeon</item>
        <item>Pediatrician</item>
        <item>Orthopedist</item>
        <item>Neurologist</item>
        <item>Cardiologist</item>
        <item>Cosmetologist</item>
        <item>Psychiatrist</item>
    </string-array>


    <string name="doc_submit_button">Submit</string>

    <string name="doc_login">Doctor Sign In</string>
    <string name="doc_login_button">Login</string>
    <string name="doc_logout_button">Logout</string>
    <string name="doc_login_reg">Signup</string>
    <string name="title_activity_main_doctor">MainDoctorActivity</string>


    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="doc_appointments">Your Appointments</string>
    <string name="doc_update_profile">Update Profile</string>

    <string name="doc_home">Home</string>
    <string name="doctor_welcome">Welcome Doctor</string>

    <string name="doc_update_info">Update Information</string>
    <string name="doc_update_button">Update</string>
    <string name="doc_appoint_delete">Delete</string>
    <string name="tap_to_upload_your_photo">Tap to upload your photo</string>
    <string name="doc_description">Description</string>
    <string name="doctor_degree">Degree</string>
    <string name="doctor_experience">Experience</string>
    <string name="signin">Sign In</string>
    <string name="no_results_found">No results found</string>


    <string-array name="gender_spinner">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>
